[gd_scene load_steps=3 format=2]

[ext_resource path="res://Elements/Diana.png" type="Texture" id=1]
[ext_resource path="res://Elements/DianaStatic.gd" type="Script" id=2]

[node name="DianaStatic" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Diana" type="Sprite" parent="."]
position = Vector2( 12.4849, 10.6556 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -11.5686, 10.5868, 8.62083, -10.6038, 11.9579, 11.9216, -11.9023, 12.7559 )

[node name="PosTop" type="Position2D" parent="."]
position = Vector2( 8.34275, -10.1782 )

[node name="PosBottom" type="Position2D" parent="."]
position = Vector2( -11.4923, 11.3869 )

[node name="PosMidTop" type="Position2D" parent="."]
position = Vector2( 5, -5.5625 )

[node name="PosMidBot" type="Position2D" parent="."]
position = Vector2( -7.3125, 6.8125 )

[node name="PosGoalBot" type="Position2D" parent="."]
position = Vector2( -2.75, 2 )

[node name="PosGoalTop" type="Position2D" parent="."]
position = Vector2( 1.4375, -1.3125 )
